fix: spacing

--- a/src/containers/SoulItem/AuctionInfo/style.module.scss
+++ b/src/containers/SoulItem/AuctionInfo/style.module.scss
@@ -106,5 +106,5 @@
   width: 100%;
   height: 0px;
   border-top: 1px solid #ececec;
-  margin-top: rem(32px);
+  margin: rem(32px) 0;
 }
